--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "aos": "^2.3.4",
+    "axios": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-video-js-player": "^1.1.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/aos": "^3.0.4",
     "tailwindcss": "^3.2.4"
   }
 }
